# embedded-rust

rustymicrobit/: Cargo.toml  Embed.toml  debug.md  memory.x  notes.md  temperature_monitor.md
rustymicrobit/src/: flash.rs  main.rs  temperature.rs  timing.rs
