[package]
name = "rustymicrobit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.1"
embedded-storage = "0.3.1"
nrf52833-hal = {version = "0.17.1", features = ["rt"]}
panic-halt = "0.2.0"
rtt-target = "0.5.0"
